--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "eslint": "^6.0.1",
     "express": "^4.16.3",
     "if-env": "^1.0.4"
   }
