--- a/package.json
+++ b/package.json
@@ -12,16 +12,15 @@
     "build": "cd client && npm run build",
     "heroku-postbuild": "npm run build"
   },
-  "author": "",
+  "author": "Mallika",
   "license": "ISC",
   "devDependencies": {
     "concurrently": "^4.1.0",
     "nodemon": "^1.18.7"
   },
   "dependencies": {
-    "axios": "^0.18.0",
-    "eslint": "^6.0.1",
-    "express": "^4.16.3",
+    "axios": "^0.19.0",
+    "express": "^4.17.1",
     "if-env": "^1.0.4"
   }
 }
