--- a/package.json
+++ b/package.json
@@ -10,12 +10,17 @@
     "client": "cd client && npm run start",
     "install": "cd client && npm install",
     "build": "cd client && npm run build",
-    "heroku-postbuild": "npm run build"
+    "heroku-postbuild": "npm run build",
+    "test": "jest"
   },
   "author": "Mallika",
   "license": "ISC",
   "devDependencies": {
     "concurrently": "^4.1.0",
+    "enzyme": "^3.10.0",
+    "enzyme-adapter-react-16": "^1.14.0",
+    "jest": "^24.7.1",
+    "jest-enzyme": "^7.0.2",
     "nodemon": "^1.18.7"
   },
   "dependencies": {
